feat: full auth flow
