# src/libs/typeorm/entities.ts
@@ -1,4 +1,5 @@
 import { User } from '../../domain/user-entity';
 import { UserVerificationCode } from '../../domain/user-verification-code-entity';
+import { UserLogin } from '../../domain/user-login';
 
-export const entities = [User, UserVerificationCode];
+export const entities = [User, UserVerificationCode, UserLogin];
